correção imagem background

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ border-right: 1px solid white;
   justify-content: center;
   align-items: center;
   color: white;
-  background: url(img/showcase.webp) center center/cover;
+  background: url(../img/showcase.webp) center center/cover;
   background-color: rgba(0, 0, 0, 0.4);
   background-blend-mode: color;
 
